...
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="changeServer_url">http://0.0.0.0:8080</string>
    <string name="changeServer_path">/InsecurePayServiceServer/rest/</string>
    <string name="send">SEND</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="information_mismatch">Please verify your information and try again.</string>
    <string name="default_password_link_sent">Your password has been reset.</string>
    <string name="common_VO">commonVO</string>
    <string name="sharedPreferenceLogin">loginPrefs</string>

    <!--Following strings are for Connectivity-->
    <string name="default_address">http://insecurepay-dev-env.idweubyz6e.us-east-1.elasticbeanstalk.com</string>
    <!--<string name="default_address">http://192.168.1.106:8080/InsecurePayServiceServer</string>-->
...
