package com.cigital.insecurepay.fragments;

import android.support.test.espresso.contrib.DrawerActions;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.widget.ListView;

import com.cigital.insecurepay.R;
import com.cigital.insecurepay.activity.LoginActivity;
import com.cigital.insecurepay.common.Constants;

import org.hamcrest.Description;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
public class ActivityHistoryFragmentTest {

    @Rule
    public final ActivityTestRule<LoginActivity> loginActivityActivityTestRule = new ActivityTestRule<>(LoginActivity.class);

    @Test
    public void checkRetrieval() {

        // Logging in
        Constants.login();

        // Open Drawer
        onView(withId(R.id.drawer_layout))
                .perform(DrawerActions.open());

        // Click on Account Management
        onView(withText(R.string.nav_activity_history))
                .perform(click());

        onView(withId(R.id.btnSubmit))
                .perform(click());

        // Checking if the list has any values displayed
        onView(withId(R.id.lvActivityHistory_transactionList))
                .check(matches(new TypeSafeMatcher<View>() {

                    @Override
                    public void describeTo(Description description) {
                    }

                    @Override
                    protected boolean matchesSafely(View view) {
                        ListView listViewObj = (ListView) view;
                        if (listViewObj.getChildCount() > 0) {
                            return true;
                        } else {
                            return false;
                        }
                    }
                }));

        // Logging out
        Constants.logout();
    }
}